--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.955.0",
     "@aws-sdk/client-s3": "^3.955.0",
+    "@aws-sdk/client-sfn": "^3.956.0",
     "@aws-sdk/lib-dynamodb": "^3.955.0",
     "@aws-sdk/s3-request-presigner": "^3.955.0",
     "aws-cdk-lib": "^2.233.0",
